# smallbrain

./: .gitignore  Cargo.toml  build.sh  eval.sh  eval_faster.sh  metadata.txt
src/: brotli_sb.rs  decode.rs  encode.rs  flac.rs  main.rs  riff.rs  tenbit.rs  wav.rs  zlib.rs  zstd.rs
